--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="favicon.gif" type="image/x-icon">
+    <link rel="shortcut icon" href="mySoftakeLogo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>World Navy co. Ltd.</title>
+    <title>MY SOFTAKE PVT. LTD.</title>
   </head>
   <body>
     <div id="root"></div>
